[gd_scene format=3 uid="uid://b37g4msancn4v"]

[ext_resource type="FontFile" uid="uid://jog4lm6tngy1" path="res://assets/fonts/Xolonium-Regular.ttf" id="1_ahhtf"]
[ext_resource type="Script" uid="uid://bag8mv7wrisnd" path="res://src/hud.gd" id="1_oo0fn"]

[sub_resource type="InputEventAction" id="InputEventAction_oo0fn"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_oo0fn"]
events = [SubResource("InputEventAction_oo0fn")]

[node name="HUD" type="CanvasLayer" unique_id=1572507907]
script = ExtResource("1_oo0fn")

[node name="ScoreLabel" type="Label" parent="." unique_id=1838754413]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_right = 22.5
offset_bottom = 78.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_ahhtf")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="." unique_id=933477364]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -120.0
offset_right = 240.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_ahhtf")
theme_override_font_sizes/font_size = 64
text = "Dodge the Creeps!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="." unique_id=887452910]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -148.0
offset_right = 100.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_ahhtf")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_oo0fn")
text = "Start"

[node name="MessageTimer" type="Timer" parent="." unique_id=1549697575]
wait_time = 2.0
one_shot = true

[node name="ScoreStats" type="Label" parent="." unique_id=1910142848]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -233.0
offset_bottom = 102.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("1_ahhtf")
theme_override_font_sizes/font_size = 30
text = "Max score: 0
Last score: 0"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
